fix: improve wrapper glow contrast

--- a/components/card/stack-card.module.scss
+++ b/components/card/stack-card.module.scss
@@ -21,7 +21,6 @@
   width: 220px;
   height: 220px;
   border-radius: 50%;
-  z-index: -1;
   left: var(--mouse-x);
   top: var(--mouse-y);
   transform: translate(-50%, -50%);
